# polymarket12

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: analyze_results.py  run_live_paper.py
src/polybot/: __init__.py  analysis.py  clob.py  config.py  dashboard.py  discovery.py  gamma.py  ledger.py  live.py  main.py  model.py  paper_trader.py  price_feed.py  resolver.py
tests/: __init__.py  test_analysis.py  test_cli.py  test_clob.py  test_discovery.py  test_gamma.py  test_ledger.py  test_live.py  test_model.py  test_paper_trader.py  test_price_feed.py  test_project_metadata.py  test_resolver.py  test_safety.py
