[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "polymarket-paper-bot"
version = "0.1.0"
description = "Paper-trading research bot for Polymarket crypto up/down markets."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pandas>=2.2",
    "rich>=13.7",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]

[project.scripts]
polybot = "polybot.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/polybot"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

